versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Gridded2d.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Gridded2d is the basic handle type in this file. Example:
//    // Create a default Gridded2d object:
//    Gridded2d handle = Gridded2dDefault();
// Functions involving Gridded2d are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_GNDS_V2_0_GENERAL_GRIDDED2D
#define C_INTERFACE_GNDS_V2_0_GENERAL_GRIDDED2D

#include "GNDStk.h"
#include "v2.0/general/Axes.h"
#include "v2.0/g2d/Array.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct Gridded2dClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Gridded2d
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct Gridded2dClass *Gridded2d;

// --- Const-aware handles.
typedef const struct Gridded2dClass *const ConstHandle2ConstGridded2d;
typedef       struct Gridded2dClass *const ConstHandle2Gridded2d;
typedef const struct Gridded2dClass *      Handle2ConstGridded2d;
typedef       struct Gridded2dClass *      Handle2Gridded2d;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstGridded2d
Gridded2dDefaultConst();

// +++ Create, default
extern_c Handle2Gridded2d
Gridded2dDefault();

// --- Create, general, const
extern_c Handle2ConstGridded2d
Gridded2dCreateConst(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstArray array
);

// +++ Create, general
extern_c Handle2Gridded2d
Gridded2dCreate(
   ConstHandle2ConstAxes axes,
   ConstHandle2ConstArray array
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
Gridded2dAssign(ConstHandle2Gridded2d self, ConstHandle2ConstGridded2d from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
Gridded2dDelete(ConstHandle2ConstGridded2d self);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
Gridded2dRead(ConstHandle2Gridded2d self, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
Gridded2dWrite(ConstHandle2ConstGridded2d self, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
Gridded2dPrint(ConstHandle2ConstGridded2d self);

// +++ Print to standard output, as XML
extern_c int
Gridded2dPrintXML(ConstHandle2ConstGridded2d self);

// +++ Print to standard output, as JSON
extern_c int
Gridded2dPrintJSON(ConstHandle2ConstGridded2d self);


// -----------------------------------------------------------------------------
// Child: axes
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Gridded2dAxesHas(ConstHandle2ConstGridded2d self);

// --- Get, const
extern_c Handle2ConstAxes
Gridded2dAxesGetConst(ConstHandle2ConstGridded2d self);

// +++ Get
extern_c Handle2Axes
Gridded2dAxesGet(ConstHandle2Gridded2d self);

// +++ Set
extern_c void
Gridded2dAxesSet(ConstHandle2Gridded2d self, ConstHandle2ConstAxes axes);


// -----------------------------------------------------------------------------
// Child: array
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
Gridded2dArrayHas(ConstHandle2ConstGridded2d self);

// --- Get, const
extern_c Handle2ConstArray
Gridded2dArrayGetConst(ConstHandle2ConstGridded2d self);

// +++ Get
extern_c Handle2Array
Gridded2dArrayGet(ConstHandle2Gridded2d self);

// +++ Set
extern_c void
Gridded2dArraySet(ConstHandle2Gridded2d self, ConstHandle2ConstArray array);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/general/Gridded2d/src/custom.h"

#undef extern_c
#endif